# 24-02-04-Quality-Param-Assess-GUI-lab

./: .qmake.stash  24-02-04-Quality-Param-Assess-GUI.pro  24-02-04-Quality-Param-Assess-GUI.qtvscr  24-02-04-Quality-Param-Assess-GUI.sln  24-02-04-Quality-Param-Assess-GUI.vcxproj  24-02-04-Quality-Param-Assess-GUI.vcxproj.filters  CMakeLists.txt  CMakeUserPresets.json  DataBuffer.cpp  DataBuffer.h  ImageViewer.cpp  ImageViewer.h  ImageViewer.ui  ParamAssessHTMLShower.cpp  ParamAssessHTMLShower.h  ParamBrowserWidget.cpp  ParamBrowserWidget.h  ParamBrowserWidget.ui  ParamSaver.cpp  ParamSaver.h  ParamTransmitter.cpp  ParamTransmitter.h  PatientManager.cpp  PatientManager.h  PatientManagerWindow.cpp  PatientManagerWindow.h  QtLogger.cpp  QtLogger.h  SpecUnionCls.cpp  SpecUnionCls.h  VideoStreamThreadFFMPeg.cpp  VideoStreamThreadFFMPeg.h  aboutdialog.ui  clickable_label.cpp  clickable_label.h  config_parse.cpp  config_parse.h  configs.yaml  display_stream_widget.cpp  display_stream_widget.h  (+87 more)
framelesswindow/: framelesswindow.ui
html/: 1.2.840.10008.192.15.323.html  1.2.840.10008.192.15.3232.html  1.2.840.10009.10.2.106.113.10.2025331921332770.html  1.2.840.10009.10.2.106.142.1.20241226167468310.html  1.2.840.10009.10.2.106.142.2.20241226161738448.html  1.2.840.10009.10.2.106.176.16.2025213155229610.html  1.2.840.10009.10.2.106.176.5.202531293122244.html  1.2.840.10009.10.2.107.152.4.20241212143025546.html  1.2.840.10009.10.2.107.152.7.20252251444214770.html  1.2.840.10009.10.2.107.162.1.20241212141471480.html  1.2.840.10009.10.2.107.162.1.20241212151534723.html  1.2.840.10009.10.2.107.162.1.20241216142438930.html  1.2.840.10009.10.2.107.162.1.20241217104918728.html  1.2.840.10009.10.2.107.162.1.20241217144256590.html  1.2.840.10009.10.2.107.162.1.20241219142487400.html  1.2.840.10009.10.2.107.162.1.20241219165124441.html  1.2.840.10009.10.2.107.162.1.20241220143372170.html  1.2.840.10009.10.2.107.162.1.20241223141531972.html  1.2.840.10009.10.2.107.162.1.20241223143442696.html  1.2.840.10009.10.2.107.162.1.20241223165036879.html  1.2.840.10009.10.2.107.162.1.20241223165524280.html  1.2.840.10009.10.2.107.162.1.20241224117165210.html  1.2.840.10009.10.2.107.162.1.20241225155531880.html  1.2.840.10009.10.2.107.162.1.20241226153119080.html  1.2.840.10009.10.2.107.162.1.20241230103053221.html  1.2.840.10009.10.2.107.162.1.20241230111315545.html  1.2.840.10009.10.2.107.162.1.20241230141035644.html  1.2.840.10009.10.2.107.162.1.202412414223260.html  1.2.840.10009.10.2.107.162.1.20251013141213197.html  1.2.840.10009.10.2.107.162.1.20251013154757496.html  1.2.840.10009.10.2.107.162.1.20251013171426478.html  1.2.840.10009.10.2.107.162.1.20251014171413279.html  1.2.840.10009.10.2.107.162.1.202511314491120.html  1.2.840.10009.10.2.107.162.1.2025113882740.html  1.2.840.10009.10.2.107.162.1.20251141142282930.html  1.2.840.10009.10.2.107.162.1.20251151552283160.html  1.2.840.10009.10.2.107.162.1.2025117891298.html  1.2.840.10009.10.2.107.162.1.202512010522170.html  1.2.840.10009.10.2.107.162.1.202512145374900.html  1.2.840.10009.10.2.107.162.1.202512173116570.html  (+2554 more)
info_extraction/: InfoExtractor.cpp  InfoExtractor.h  ScaleExtractor.cpp  ScaleExtractor.h
ocr_inference/: OCRDet.cpp  OCRDet.h  OCRInferer.cpp  OCRInferer.h  OCRRec.cpp  OCRRec.h
param_assessment/: BiplaneLVEFAssesser.cpp  BiplaneLVEFAssesser.h  DoFuncParamsAssess.cpp  DoFuncParamsAssess.h  DoSpecParamsAssess.cpp  DoSpecParamsAssess.h  LVEFAssesser.cpp  LVEFAssesser.h  OutPaintInferer.cpp  OutPaintInferer.h  PLAXAorticDetect.cpp  PLAXAorticDetect.h  PLAXPoseClsInferer.cpp  PLAXPoseClsInferer.h  aad_assess.cpp  aad_assess.h  aao_assess.cpp  aao_assess.h  aao_segment_inferer.cpp  aao_segment_inferer.h  ao_vti_segment_inferer.cpp  ao_vti_segment_inferer.h  asd_and_sjd_access.h  asd_and_sjd_assess.cpp  assess_utils.cpp  assess_utils.h  avad_assess.cpp  avad_assess.h  avad_keypoints_inferer.cpp  avad_keypoints_inferer.h  do_assess.cpp  do_assess.h  ed2value_es_line_inferer.cpp  ed2value_es_line_inferer.h  ed4value_es_line_inferer.cpp  ed4value_es_line_inferer.h  ed_es_line_aorta_assess.cpp  ed_es_line_aorta_assess.h  ed_es_line_assess.cpp  ed_es_line_assess.h  (+55 more)
process_threads/: HttpJSONReceiver.cpp  HttpJSONReceiver.h  HttpServerThread.cpp  HttpServerThread.h  InfoExtractThread.cpp  InfoExtractThread.h  KeyframeInferThread.cpp  KeyframeInferThread.h  ParamAssessThread.cpp  ParamAssessThread.h  ROIScaleDetThread.cpp  ROIScaleDetThread.h  ViewClsKeyframeInferThread.cpp  ViewClsKeyframeInferThread.h  quality_control_thread.cpp  quality_control_thread.h
quality_control/: AngleCalculationA4C.cpp  AngleCalculationA4C.h  AngleCalculationPLAX.cpp  AngleCalculationPLAX.h  EchoQuality.cpp  EchoQuality.h  EchoQualityAssessmentA2C.cpp  EchoQualityAssessmentA2C.h  EchoQualityAssessmentA3C.cpp  EchoQualityAssessmentA3C.h  EchoQualityAssessmentA4C.cpp  EchoQualityAssessmentA4C.h  EchoQualityAssessmentA5C.cpp  EchoQualityAssessmentA5C.h  EchoQualityAssessmentPLAX.cpp  EchoQualityAssessmentPLAX.h  EchoQualityAssessmentPSAXA.cpp  EchoQualityAssessmentPSAXA.h  EchoQualityAssessmentPSAXGV.cpp  EchoQualityAssessmentPSAXGV.h  EchoQualityAssessmentPSAXMV.cpp  EchoQualityAssessmentPSAXMV.h  EchoQualityAssessmentPSAXPM.cpp  EchoQualityAssessmentPSAXPM.h  GainClassification.cpp  GainClassification.h  KeyframeDetection.cpp  KeyframeDetection.h  RoIExtraction.cpp  RoIExtraction.h  StructureDetection.cpp  StructureDetection.h  angleinfer_a4c.cpp  angleinfer_a4c.h  angleinfer_plax.cpp  angleinfer_plax.h  buffers.h  cplusfuncs.cpp  cplusfuncs.h  echo_quality_control.cpp  (+21 more)
quality_control/common/: buffers.h  common.h  sampleDevice.h  sampleEngines.cpp
quality_control/common/windows/: getopt.c
